--- a/docs/main.css
+++ b/docs/main.css
@@ -10,3 +10,16 @@ main {
   border-radius: 3px;
   box-shadow: 0 0 20px 0 silver;
 }
+
+th, td {
+  text-align: left;
+  border: solid 1px silver;
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  padding: 10px;
+}
+
+thead, tfoot {
+  background-color: #333;
+  color: white;
+}
