--- a/docs/main.css
+++ b/docs/main.css
@@ -1,4 +1,4 @@
-html, body { min-height: 100vh; height: 100%; font-family: Cursive; }
+html, body { min-height: 100vh; height: 100%; font-family: Cursive; margin: 0; padding: 0; }
 
 body { display: flex; flex-direction: column; justify-content: middle; background: rgb(131,58,180);
 background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);}
