--- a/docs/main.css
+++ b/docs/main.css
@@ -19,6 +19,10 @@ th, td {
   padding: 10px;
 }
 
+td:last-child {
+  text-align: right;
+}
+
 thead, tfoot {
   background-color: #333;
   color: white;
